# PageWeave

./: .gitignore  README.md  generate_icons.py  guide.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
.pi/extensions/trellis/: index.ts
.trellis/: .template-hashes.json
.trellis/spec/backend/: index.md  quality-guidelines.md
.trellis/spec/frontend/: index.md  quality-guidelines.md
.trellis/spec/guides/: cross-layer-thinking-guide.md  index.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
sidecar/: README.md  babeldoc_entry.py  babeldoc_sidecar.spec  build_markitdown_sidecar.sh  build_sidecar.sh  markitdown_entry.py  markitdown_sidecar.spec  sitecustomize.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  secrets.rs
src-tauri/src/convert/: args.rs  commands.rs  mod.rs  model.rs  runner.rs  state.rs
src-tauri/src/db/: helpers.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/provider/: commands.rs  connectivity.rs  mod.rs  model.rs  presets.rs
src-tauri/src/settings/: commands.rs  mod.rs
src-tauri/src/translate/: args.rs  assets.rs  commands.rs  history.rs  mod.rs  model.rs  progress.rs  runner.rs  state.rs
src/app/: routes.tsx
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/services/: api.ts
src/shared/: constants.ts  openers.ts
src/stores/: convertStore.ts  providerStore.ts  settingsStore.ts  translateStore.ts  updateStore.ts
src/types/: index.ts
(+48 files in other folders)
