[package]
name = "pageweave"
version = "0.1.0"
description = "PageWeave — local PDF translation desktop tool"
authors = ["xingran"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
# The `_lib` suffix avoids a bin/lib name collision on Windows.
name = "pageweave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
which = "7"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
regex = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
